--- a/conflicts/afeganistao.html
+++ b/conflicts/afeganistao.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <script src="https://kit.fontawesome.com/b397ee59be.js" crossorigin="anonymous"></script>
-    <script src="../scripts.js"></script>
+    <script src="scripts.js"></script>
 </head>
 
 <body>
